--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.3.28",
     "graphql": "^16.9.0",
     "next": "14.2.5",
+    "next-seo": "^6.6.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
